--- a/index.html
+++ b/index.html
@@ -17,11 +17,22 @@
         <div class="lds-hourglass "></div>
     </div>
     <!----------------------------Start Navbar section------------------------------------------------>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg m-auto navbar-light bg-dark fixed-top ">
+        <div class="container ">
             <a class="navbar-brand" href="#">Digital <span class="text-white"> Clock</span></a>
-            </div>
+            <ul class="list-unstyled ">
+                <a class="text-decoration-none " href="https://www.facebook.com/taher.salah.7927" target="_blank">
+                    <li class="socialMe list-inline-item "><i class="fab1 fab fa-facebook "></i></li>
+                </a>
+                <a class="text-decoration-none " href="https://www.linkedin.com/in/taher-salah-1a5622134/"
+                    target="_blank">
+                    <li class="socialMe list-inline-item "><i class="fab3 fab fa-linkedin "></i></li>
+                </a>
+                <a class="text-decoration-none " href="https://github.com/TaherSalah" target="_blank">
+                    <li class="socialMe list-inline-item "><i class="fab5 fab fa-github "></i></li>
+                </a>
+            </ul>
+        </div>
         </div>
     </nav>
     <!-----------------------------------------End Navbar section------------------------------------------------------->
@@ -45,45 +56,7 @@
     </div>
     <!-----------------------------------------End DigClock section------------------------------------------------------->
 
-    <!--------------------------------------------- Start Footer ----------------------------------------------------------->
 
-    <footer class="bg-dark pt-4 pb-3 position-absolute  align-content-end">
-        <div class="container text-white text-center ">
-            <div class="row ">
-                <div class="col-md-7 text-center ">
-                    <p>Copyright <i class="Copyright fa fa-copyright "></i> February 2022 All Rights Reseved by
-                        <a class="myNames text-decoration-none"> Taher Salah</a>
-                    </p>
-                </div>
-                <div class="col-md-4 ">
-                    <ul class="list-unstyled ">
-                        <a class="text-decoration-none" href="https://www.facebook.com/taher.salah.7927 " target="_blank ">
-                            <li class="socialMe list-inline-item "><i class="fab1 fab fa-facebook "></i></li>
-                        </a>
-                        <a class="text-decoration-none" href="https://www.instagram.com/tahersalahm/ " target="_blank ">
-                            <li class="socialMe list-inline-item "><i class="fab2 fab fa-instagram "></i></li>
-                        </a>
-                        <a class="text-decoration-none" href="https://www.linkedin.com/in/taher-salah-1a5622134/ " target="_blank ">
-                            <li class="socialMe list-inline-item "><i class="fab3 fab fa-linkedin "></i></li>
-                        </a>
-                        <a class="text-decoration-none" href=" " target="_blank ">
-                            <li class="socialMe list-inline-item "><i class="fab4 fab fa-twitter "></i></li>
-                        </a>
-                        <a class="text-decoration-none" href="https://github.com/TaherSalah " target="_blank ">
-                            <li class="socialMe list-inline-item "><i class="fab5 fab fa-github "></i></li>
-                        </a>
-                        <a class="text-decoration-none" href="# ">
-                            <li class="socialMe list-inline-item "><i class="fab6 fab fa-google "></i></li>
-                        </a>
-                        <a class="text-decoration-none" href="https://api.whatsapp.com/send/?phone=01094529752&text&app_absent=0 " target="_blank ">
-                            <li class="socialMe list-inline-item "><i class="fab7 fab fa-whatsapp "></i></li>
-                        </a>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-------------------------------------------------- End Footer ------------------------------------------------------------>
 
 
     <!---------------------------------------------Start  script links----------------------------------------------------------->
